[tool.poetry]
name = "aws-codeartifact-credentials-helper"
version = "0.1.0"
description = "Amazon CodeArtifact Credential Helper"
authors = ["Anton Khizunov <khizunov@gmail.com>"]

[tool.poetry.scripts]
aws-codeartifact-credentials-helper = "aws_codeartifact_credentials_helper.main:app"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "~=1.20"
typer = {extras = ["all"], version = "~=0.4.0"}
tinynetrc = "~=1.3.1"
botocore = "~=1.23.24"
pydantic = {extras= ["dotenv"], version = "~=1.8"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
